<resources>
    <string name="app_name">SmartFood</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to main menu -->
    <string name="label_signin">Sign In</string>
    <string name="label_signup">Create Account</string>
    <string name="new_user">New user?</string>

    <!-- Strings related to account type activity -->
    <string name="label_industry">Food Industry</string>
    <string name="label_bank">Food Bank</string>
    <string name="label_volunteer">Volunteer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_hub">HubActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Google maps api key -->
    <string name="google_maps_API_key">AIzaSyCfDBR7FJiLVwkLUJQQpXgBn2ZC_Wn-LPY</string>
</resources>
